--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "aptos narrow", sans-serif;
+  font-family:"Atkinson Hyperlegible Mono", monospace;
   text-transform: lowercase;
 }
 
